# cached_interpolation

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/workflows/: build-wheels.yml  build_wheels.yml  python-publish.yml  test.yml
cached_interpolate/: __init__.py  _version.py  build.pyx  build_array_api.py  build_jax.py  interpolate.py  matrix_forms.py
cached_interpolate/test/: conftest.py  interpolate_test.py  test_jax.py
cached_spline/: __init__.py  spline.py
test/: interpolate_test.py  spline_test.py
