[build-system]
requires = [
    "setuptools>=69",
    "setuptools_scm[toml]>=3.4.3",
    "wheel",
    "cython",
    "numpy>=2",
]
build-backend = "setuptools.build_meta"

[project]
name = "cached_interpolate"
description = "Efficient repeated evaluation of splines at fixed points."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Colm Talbot", email = "colm.talbot@ligo.org"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "array-api-compat",
    "array-api-extra",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ColmTalbot/cached_interpolation"

[tool.setuptools.packages.find]
include = ["cached_interpolate*"]

[tool.setuptools.package-data]
cached_interpolate = ["*.pyx"]

[tool.setuptools_scm]
write_to = "cached_interpolate/_version.py"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-* cp313t-* cp314t-*"
skip = "*-win32 *-manylinux_i686 *-musllinux*"
before-build = "pip install cython numpy setuptools_scm"
enable = ["cpython-freethreading"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
